Fix alignment and reposition languages count in Special:MobileLanguages
*Fix content alignment
*Reposition total number of languages in overlay panel

Bug: T191562

--- a/resources/mobile.languages.structured/LanguageOverlay.less
+++ b/resources/mobile.languages.structured/LanguageOverlay.less
@@ -27,11 +27,6 @@
 		letter-spacing: 1px;
 		padding: 2em 1em 0.5em;
 		text-transform: uppercase;
-
-		span {
-			float: right;
-			padding-left: 2em;
-		}
 	}
 
 	.site-link-list {
